--- a/src/components/Herosection/Herosection.css
+++ b/src/components/Herosection/Herosection.css
@@ -1,6 +1,6 @@
 .hero-container {
   background-color: #D7F5DC; /* Light mint green background */
-  padding: 60px 20px;
+  padding: 60px 0px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
@@ -69,7 +69,8 @@
   justify-content: space-evenly;
   flex-wrap: wrap;
   gap: 60px;
-  padding: 40px 0;
+  padding: 60px;
+  color: #F8FFF9;
   background-color: white;
   border-top: 1px solid #e0e0e0;
 }
@@ -132,6 +133,13 @@
   }
 }
 
+@media (min-width: 481px) and (max-width: 767px) {
+  .main-image {
+    width: 100%;
+    height: auto;
+  } 
+}
+
 @media (max-width: 480px) {
   .hero-title {
     font-size: 1.5rem;
@@ -146,4 +154,8 @@
     flex-direction: column;
     align-items: center;
   }
+  .main-image {
+    width: 100%;
+    height: auto;
+  } 
 }
