--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 *{
-  margin: 0;
-  padding: 0;
+  margin-left:30rem; 
+  margin-right: 30rem;
+  padding: 30rem;
   box-sizing: border-box;
 }
 .bg-color{
